image reader updated for genericUserPanel.java